# bible-versions

./: .gitignore  README.md  pyproject.toml
src/bible_versions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bible_versions/scraping/: QUICKSTART.md
